configure gateway, broadcast, mask